<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.adm.pantallas.Registrarse1"
    android:background="@drawable/fondoreg2">

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="51dp"
        android:ems="10"
        android:hint="@string/RegNombre"
        android:inputType="textPersonName"
        android:textSize="20dp"
        android:textColorHint="#9E9E9E"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/etApellido" />

    <EditText
        android:id="@+id/etContrasena"
        style="@android:style/Widget.DeviceDefault.AutoCompleteTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/etUsuario"
        android:layout_below="@+id/etUsuario"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/RegContrasena"
        android:textColorHint="#9E9E9E"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/etRepetir"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:ems="10"
        android:hint="@string/RegRepetir_contrasena"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:textSize="20dp"
        android:textColorHint="#9E9E9E"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:layout_below="@+id/etContrasena"
        android:layout_alignStart="@+id/etContrasena" />

    <EditText
        android:id="@+id/etApellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etNombre"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:textColorHint="#9E9E9E"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:hint="@string/RegApellido"
        android:inputType="textPersonName"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/etMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etApellido"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/RegMail"
        android:textColorHint="#9E9E9E"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:inputType="textEmailAddress"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/etUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/etMail"
        android:layout_below="@+id/etMail"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:hint="@string/RegUser"
        android:textColorHint="#9E9E9E"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:inputType="textPersonName"
        android:textSize="20dp" />

    <Button
        android:id="@+id/btnCodigo"
        android:layout_width="185dp"
        android:layout_height="62dp"
        android:layout_below="@+id/etRepetir"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="26dp"
        android:background="@drawable/button"
        android:onClick="Registrarse"
        android:text="@string/IntroSiguiente"
        android:textColor="#212121"
        android:textColorHint="#9E9E9E"
        android:textSize="20dp"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_Verificar" />

    <TextView
        android:id="@+id/txtIrALogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="aLogin"
        android:text="@string/Registrarse1_VolveraLogin"
        android:textColor="#BDBDBD"
        android:textSize="20sp"
        android:textStyle="italic"

        android:layout_marginTop="26dp"
        android:layout_below="@+id/btnCodigo"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
