<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.adm.pantallas.Principal">


    <Button
        android:id="@+id/btnSalida"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="29dp"
        android:text="@string/Salida_boton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.494" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/LayoutOpciones"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="9dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSalida"
        app:layout_constraintVertical_bias="1.0">

        <EditText
            android:id="@+id/etDistancia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:inputType="numberDecimal"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etTiempo"
            tools:ignore="LabelFor,RtlHardcoded" />

        <TextView
            android:id="@+id/txtDistancia"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/Salida_Distancia"
            android:textAlignment="textStart"
            android:textSize="17sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTiempo"
            tools:ignore="RtlHardcoded" />

        <EditText
            android:id="@+id/etTiempo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_marginTop="142dp"
            android:ems="10"
            android:inputType="numberDecimal"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/LayoutOpciones"
            tools:ignore="LabelFor,RtlHardcoded" />

        <TextView
            android:id="@+id/txtTiempo"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="142dp"
            android:text="@string/Salida_Tiempo"
            android:textAlignment="textStart"
            android:textSize="17sp"
            app:layout_constraintLeft_toLeftOf="@+id/LayoutOpciones"
            app:layout_constraintTop_toTopOf="@+id/LayoutOpciones"
            tools:ignore="RtlHardcoded" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        app:layout_constraintGuide_begin="20dp"
        android:orientation="horizontal" />
</android.support.constraint.ConstraintLayout>
